<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreOwnerHomepage">

    <TextView
        android:id="@+id/textSelect"
        android:layout_width="309dp"
        android:layout_height="37dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/select_button"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/welcome_home"
        android:textColor="#332D2D"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="233dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="#332D2D"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/welcomeText"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnOrders"
            android:layout_width="218dp"
            android:layout_height="81dp"
            android:layout_marginTop="70dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:fontFamily="@font/roboto_bold"
            android:onClick="openOrders"
            android:text="@string/view_orders"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnProducts"
            android:layout_width="218dp"
            android:layout_height="81dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:fontFamily="@font/roboto_bold"
            android:onClick="openProductPage"
            android:text="@string/products"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="218dp"
            android:layout_height="81dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:fontFamily="@font/roboto_bold"
            android:onClick="openMyProfile"
            android:text="@string/my_profile"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>